--- a/public/header.html
+++ b/public/header.html
@@ -3,7 +3,7 @@
     <nav>
         <ul>
             <li><a href="weather">Pogoda</a></li>
-            <li><a href="">menu 2</a></li>
+            <li><a href="form">Formularz</a></li>
             <li><a href="">menu 3</a></li>
             <li><a href="">menu 4</a></li>
         </ul>
