commit, new weather.html

--- a/public/header.html
+++ b/public/header.html
@@ -1,5 +1,7 @@
 <header>
     <h1><a href="/">Hello world!</a></h1>
+    <p id="quote">This is some random quote</p>
+    <p id="author"> - Author</p>
     <nav>
         <ul>
             <li><a href="weather">Pogoda</a></li>
@@ -8,5 +10,5 @@
             <li><a href="">menu 4</a></li>
         </ul>
     </nav>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <script src="./quote.js"></script>
 </header>
