big commit hopefully final

--- a/public/header.html
+++ b/public/header.html
@@ -1,14 +1,10 @@
-<header>
-    <h1><a href="/">Hello world!</a></h1>
-    <p id="quote">This is some random quote</p>
-    <p id="author"> - Author</p>
-    <nav>
-        <ul>
-            <li><a href="weather">Pogoda</a></li>
-            <li><a href="form">Formularz</a></li>
-            <li><a href="">menu 3</a></li>
-            <li><a href="">menu 4</a></li>
-        </ul>
-    </nav>
-    <script src="./quote.js"></script>
-</header>
+<h1><a href="/">Hello world!</a></h1>
+<p id="quote"></p>
+<p id="author"></p>
+<nav>
+    <ul>
+        <li><a href="weather">Pogoda</a></li>
+        <li><a href="form">Formularz</a></li>
+        <li><a href="info">O projekcie</a></li>
+    </ul>
+</nav>
